--- a/views/stackexchange.ejs
+++ b/views/stackexchange.ejs
@@ -4,11 +4,14 @@
 		<title></title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylesheet" href="/static/css/highlight.dracula.css">
+		<script src="/static/js/highlight.pack.js"></script>
 		<style>
-			code {
-				outline: 1px solid black;
-				background-color: darkgray;
-				color: white;
+			pre code.hljs {
+				display: block;
+			}
+			code.hljs {
+				display: inline;
 			}
 		</style>
 	</head>
@@ -19,5 +22,13 @@
 <%- answers[i].body %>
 			</div>
 		<% } %>
+
+		<script>
+			hljs.initHighlightingOnLoad(); // highlight normal <pre><code></code></pre> blocks
+			// highlight inline code blocks <code></code>
+			Array.prototype.slice.call(document.querySelectorAll('code')) // turn it into an array
+				.filter(element => !element.classList.contains('hljs')) // filter out everything that's already been parsed by hljs
+				.forEach(element => hljs.highlightBlock(element)); // highlight them
+		</script>
 	</body>
 </html>
