--- a/views/stackexchange.ejs
+++ b/views/stackexchange.ejs
@@ -14,6 +14,8 @@
 				display: inline;
 			}
 		</style>
+
+		<link rel="stylesheet" href="/static/css/stackexchange.css">
 	</head>
 	<body>
 		<% if (typeof(question) === 'object') { %>
