Made stackexchange ejs file have some minor fixes (comments not displaying in the same way for question and answer) and made the getanswers page and getquestionandanswers page work similarly.

--- a/views/stackexchange.ejs
+++ b/views/stackexchange.ejs
@@ -40,7 +40,7 @@
 				<% if (answers[i].comments.length > 0) { %>
 					<div class="comments box">
 						<% for (let j = 0; j < answers[i].comments.length; j++) { %>
-							<p class="comment"><%- answers[i].comments[j] %></p>
+							<p class="comment"><%= answers[i].comments[j].score %> | <%- answers[i].comments[j].body %></p>
 						<% } %>
 					</div>
 				<% } %>
