--- a/views/google.ejs
+++ b/views/google.ejs
@@ -6,16 +6,20 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
 	<body>
-		<input id="search-bar" type="text" placeholder="Search google...">
-		<button id="submit">Submit</button>
+		<div id="search">
+			<input id="search-bar" type="text" placeholder="Search google...">
+			<button id="submit">Submit</button>
+		</div>
 
 		<div id="results">
 			<% if (typeof(links) === 'object' && Array.isArray(links)) { %>
 				<% for (let i = 0; i < links.length; i++) { %>
-					<div class="result">
-						<a class="title" href="<%= links[i].href %>"><%= links[i].title %></a>
-						<p class="description"><%= links[i].description %></p>
-					</div>
+					<% if (links[i].href && links[i].title) { %>
+						<div class="result">
+							<a class="title" href="<%= links[i].href %>"><%= links[i].title %></a>
+							<p class="description"><%= links[i].description %></p>
+						</div>
+					<% } %>
 				<% } %>
 			<% } else { %>
 				.... You need to search something
