--- a/views/google.ejs
+++ b/views/google.ejs
@@ -4,6 +4,8 @@
 		<title></title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+
+		<link rel="stylesheet" href="/static/css/google.css">
 	</head>
 	<body>
 		<div id="search">
